# qdrant-mcp

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: docker-multi-image.yml
src/: client.ts  index.ts  server.ts
src/better_qdrant_mcp/: __init__.py  __main__.py  embeddings.py  qdr_client.py  tools.py
tests/: index.test.ts
