[project]
name = "better-qdrant-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "jtsang4", email = "info@jtsang.me" }]
requires-python = ">=3.12"
dependencies = ["fastmcp>=2.13.1", "openai>=1.47.0", "qdrant-client>=1.15.1"]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"
