[project]
name = "better-qdrant-mcp"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "jtsang4", email = "info@jtsang.me" }]
requires-python = ">=3.12"
dependencies = [
    "fastembed>=0.7.3",
    "fastmcp>=2.13.1",
    "jieba>=0.42.1",
    "openai>=1.47.0",
    "qdrant-client>=1.15.1",
]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
better-qdrant-mcp = "better_qdrant_mcp:run"
